Contact DF in progress

--- a/Starter_Files/ETL_Mini_Project_JMurphy_PFerreira.ipynb
+++ b/Starter_Files/ETL_Mini_Project_JMurphy_PFerreira.ipynb
@@ -2494,7 +2494,8 @@
     }
    ],
    "source": [
-    "# Check the datatypes.\n"
+    "# Check the datatypes.\n",
+    "contact_info_df.info()"
    ]
   },
   {
@@ -2628,7 +2629,7 @@
     "\n",
     "\n",
     "# Drop the contact_name column\n",
-    "\n"
+    "contacts_df_clean = contact_info_df.drop('contact_name')\n"
    ]
   },
   {
@@ -2758,7 +2759,8 @@
     }
    ],
    "source": [
-    "# Reorder the columns\n"
+    "# Reorder the columns\n",
+    "contacts_df_clean= contacts_df_clean['contact_id', 'first_name', 'last_name', 'email']"
    ]
   },
   {
@@ -2785,7 +2787,8 @@
     }
    ],
    "source": [
-    "# Check the datatypes one more time before exporting as CSV file.\n"
+    "# Check the datatypes one more time before exporting as CSV file.\n",
+    "contacts_df_clean.info()"
    ]
   },
   {
